[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/EnemyDrone/EnemyDrone.gd" type="Script" id=1]
[ext_resource path="res://Enemies/EnemyDrone/PlayerDetectionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hit_Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/EnemyDrone/DroneSprite2.png" type="Texture" id=5]
[ext_resource path="res://Hit_Hurtboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/EnemyDrone/DroneSprite3.png" type="Texture" id=7]
[ext_resource path="res://Assets/EnemyDrone/DroneSprite5.png" type="Texture" id=8]
[ext_resource path="res://Assets/EnemyDrone/DroneSprite4.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "DroneAnimation",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.7072, 8.19907 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.077, 12.8948 )

[sub_resource type="CircleShape2D" id=4]
radius = 672.232

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 21.0369, 12.9202 )

[node name="EnemyDrone" type="KinematicBody2D"]
position = Vector2( -0.187286, 0 )
scale = Vector2( 0.6, 0.6 )
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "DroneAnimation"
frame = 2
playing = true
offset = Vector2( -2, 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.343358, 0.655507 )
shape = SubResource( 2 )
disabled = true

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1.19209e-07, 0.156072 )
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.0980392 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 5 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]
